@@ -2,6 +2,9 @@ Changes with Apache 2.1.5
 
   [Remove entries to the current 2.0 section below, when backported]
 
+  *) mod_disk_cache: Support storing multiple variations of one URL. PR 35211.
+     [Paul Querna]
+
   *) mod_disk_cache: Atomically create the header data file. [Paul Querna]
 
   *) mod_cache: Fix 'Vary: *' behavior to be RFC compliant. PR 16125. 
